@@ -1014,6 +1014,7 @@ Mod(-904583688/27200667365, y^2 + Mod(-t, t^2 + 1)*y + 32)*y^2 + Mod(-485238
 [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
 [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]
 [-1/12, -3/2, 16/3, -1/12, -27/4, 1/6, 4/3]~
+[0, 0, -2399/5121840000, -479/13111910400000, 1/307310400000]~
 [1, 0, 0, 0, 0, 0]
 8
 [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]~
@@ -1533,4 +1534,4 @@ t, -6*t - 4, t + 2]
   ***   at top-level: mfgaloistype([4,1,-4],x)
   ***                 ^------------------------
   *** mfgaloistype: incorrect type in mfgaloistype (t_POL).
-Total time spent: 10872
+Total time spent: 9770
